--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,17 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: #ffeaa7;
   color: hsl(198, 1%, 29%);
   font-family: "Architects Daughter", cursive;
+}
+
+.heading {
+  text-shadow: 1.5px 1.5px 6px;
 }
 
 .container {
@@ -18,8 +23,8 @@ body {
   background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
   background-size: 25px 25px;
   border-radius: 20px;
-  box-shadow: 4px 3px 7px 2px #00000040;
-  padding: 1rem;
+  box-shadow: 4px 4.5px 7px 2px #00000040;
+  padding-top: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,6 +39,21 @@ body {
 
 .carousel-container {
   display: flex;
+}
+
+.arrows:hover {
+  transform: scale(1.05);
+  transition: all 0.1s linear;
+  cursor: pointer;
+  color: hsl(180, 1%, 20%);
+}
+
+.left {
+  margin-right: 10px;
+}
+
+.right {
+  margin-left: 2px;
 }
 
 .card-structure {
@@ -67,35 +87,20 @@ body {
   background-color: #f1f5f8;
 }
 
-.arrows {
-  transition: all 0.1 ease-in;
-}
-
-.arrows:hover {
-  transform: scale(1.05);
-  transition: all 0.1 ease-in;
-  cursor: pointer;
-  color: hsl(180, 1%, 20%);
-}
-
-.left {
-  margin-right: 10px;
-}
-
-.right {
-  margin-left: 2px;
-}
-
 .popup {
   position: absolute;
   background-color: #bbd4e8;
   border-radius: 15px 15px 15px 15px;
-  padding: 10px;
+  padding: 10px 12.5px 10px 10px;
   top: 200px;
   left: -5px;
   width: 400px;
   height: 120px;
   z-index: 10000;
+}
+
+.popup-text {
+  position: relative;
 }
 
 .popup-close {
